@@ -12,7 +12,6 @@ import org.elasticsearch.common.io.stream.Writeable;
 import org.elasticsearch.xpack.core.ml.AbstractBWCWireSerializationTestCase;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static org.elasticsearch.test.BWCVersions.getAllBWCVersions;
@@ -57,6 +56,6 @@ public class TestQueryRulesetActionResponseBWCSerializingTests extends AbstractB
 
     @Override
     protected List<TransportVersion> bwcVersions() {
-        return getAllBWCVersions().stream().filter(v -> v.onOrAfter(TransportVersion.minimumCompatible())).collect(Collectors.toList());
+        return getAllBWCVersions().stream().toList();
     }
 }
